# ambd_matter

./: .gitignore  .gitmodules  MATTER.md  README.md
.github/workflows/: main.yml
component/common/api/: lwip_netconf.c  lwip_netconf.h
component/common/api/at_cmd/: atcmd_lwip.c  atcmd_sys.c  atcmd_wifi.c  log_service.c
component/common/api/network/include/: lwipopts.h
component/common/api/platform/: platform_stdlib_rtl8721d.h
component/common/api/wifi/: wifi_conf.c  wifi_conf.h
component/common/api/wifi/rtw_wpa_supplicant/wpa_supplicant/: wifi_eap_config.c
component/common/application/matter/: README.md
component/common/application/matter/application/: example_matter.c  matter_dcts.c  matter_dcts.h  matter_timers.c  matter_wifis.c
component/common/application/matter/common/atcmd/: atcmd_matter.c
component/common/application/matter/common/include/: FreeRTOSConfig_Matter.h  platform_opts_matter.h  platform_stdlib_matter.h
component/common/application/matter/common/mbedtls/: mbedtls_config.h
component/common/application/matter/common/port/: chip_porting.h  matter_dcts.c  matter_freertos.c  matter_ota.c  matter_timers.c  matter_utils.c  matter_utils.h  matter_wifis.c  matter_wifis.h
component/common/application/matter/core/: matter_control.cpp  matter_control.h  matter_core.cpp  matter_core.h  matter_data_model.cpp  matter_data_model.h  matter_data_model_presets.cpp  matter_data_model_presets.h  matter_events.h  matter_fabric_observer.h  matter_interaction.cpp  matter_interaction.h  matter_prov.cpp  matter_prov.h
component/common/application/matter/driver/: bridge_dm_driver.cpp  bridge_dm_driver.h  bridge_driver.cpp  bridge_driver.h  opstate_driver.cpp  opstate_driver.h
component/common/application/matter/example/: matter_example_entry.c  matter_example_entry.h
component/common/application/matter/example/aircon/: README.md  aircon-app.matter  aircon-app.zap
component/common/application/matter/example/bridge/: README.md  example_matter_bridge.cpp  matter_drivers.cpp  matter_drivers.h
component/common/application/matter/example/bridge_dm/: README.md  bridge-app.matter  example_matter_bridge.cpp  gen_config.h  matter_drivers.cpp  matter_drivers.h
component/common/application/matter/example/chiptest/: example_matter.c
component/common/application/matter/example/dishwasher/: README.md  dishwasher-app.matter
component/common/application/matter/example/laundrywasher/: README.md  example_matter_laundrywasher.cpp  example_matter_laundrywasher.h  laundrywasher-app.matter  laundrywasher-app.zap
component/common/application/matter/example/light/: README.md  matter_drivers.cpp
component/common/application/matter/example/light_dm/: README.md  example_matter_light.cpp  gen_config.h
component/common/application/matter/example/refrigerator/: README.md  matter_drivers.cpp  refrigerator-app.matter
component/common/application/matter/example/thermostat/: README.md  matter_drivers.cpp  matter_drivers.h
component/common/application/matter/mbedtls/: mbedtls_config.h  net_sockets.c
component/common/application/matter/project/amebad/: Makefile  Makefile.include.matter.hp.gen  Makefile.include.matter.lp.gen  includepath.cmake  toolchain.cmake
component/common/application/matter/project/amebad/make/chip_main/lighting_app/: CMakeLists.txt  Makefile
component/common/drivers/wlan/realtek/include/: wifi_constants.h
component/common/example/: example_entry.c
component/common/example/high_load_memory_use/: readme.txt
component/common/example/httpc/: readme.txt
component/common/example/mqtt/: readme.txt
component/common/example/sntp_showtime/: readme.txt
component/common/example/ssl_download/: readme.txt
component/common/example/websocket_client/: readme.txt
component/common/example/wlan_fast_connect/: example_wlan_fast_connect.c
component/common/example/wlan_scenario/: readme.txt
component/common/file_system/dct/: dct.h  dct2.h
component/common/mbed/hal/: rtc_api.h
component/common/mbed/targets/hal/rtl8721d/: PeripheralNames.h  objects.h  spdio_api.c
component/common/utilities/: tcptest.c
component/os/freertos/: freertos_heap5_config.c  freertos_heap5_config.h  freertos_service.h
component/os/freertos/freertos_v10.2.0/Source/: tasks.c  timers.c
component/os/freertos/freertos_v10.2.0/Source/include/: FreeRTOS.h  portable.h  task.h
component/os/os_dep/: osdep_service.c
component/os/os_dep/include/: device_lock.h  osdep_service.h
component/soc/realtek/amebad/cmsis/: cmsis_gcc.h  core_cache.h
component/soc/realtek/amebad/fwlib/crypto/: rtl8721dhp_crypto_ram.c  rtl8721dhp_sha.c
component/soc/realtek/amebad/fwlib/include/: basic_types.h  rtl8721d_backup_reg.h  rtl8721d_ota.h  rtl8721d_otf.h  rtl8721d_ram_libc.h
component/soc/realtek/amebad/fwlib/ram_common/: rtl8721d_ram_libc.c
component/soc/realtek/amebad/misc/: DsoHandle.c  rtl8721d_ota.c
doc/matter/: FactoryData_guide.md  MatterOTA_guide.md
project/realtek_amebaD_va0_example/GCC-RELEASE/project_hp/: Makefile
project/realtek_amebaD_va0_example/GCC-RELEASE/project_hp/asdk/: Makefile  Makefile.include.bt.gen  Makefile.include.gen  ameba_zap_cluster_list.py  cluster-file.txt  code_analyze.py  rlx8721d_test.ld
project/realtek_amebaD_va0_example/GCC-RELEASE/project_hp/toolchain/: Makefile
project/realtek_amebaD_va0_example/GCC-RELEASE/project_lp/asdk/: Makefile.include.gen
project/realtek_amebaD_va0_example/GCC-RELEASE/project_lp/toolchain/: Makefile
project/realtek_amebaD_va0_example/inc/inc_hp/: FreeRTOSConfig.h  build_info.h.in  platform_autoconf.h  platform_opts.h
project/realtek_amebaD_va0_example/inc/inc_lp/: FreeRTOSConfig.h  build_info.h  platform_autoconf.h
tools/AmebaD/Image_Tool/: Download.ini
tools/AmebaD/Image_Tool_Linux/: README.txt  flash.sh
tools/AmebaD/Image_Tool_MacOS/MacOS_v10/: README.txt  mpp.ini
tools/AmebaD/Image_Tool_MacOS/MacOS_v11/: README.txt
tools/matter/codegen_helpers/: parse_clusters.py
tools/matter/factorydata/: gen-certs.sh
tools/matter/ota/: python_custom_ecdsa_D_gcc.py
(+145 files in other folders)
